DO REFAKTORYZACJI + POPRAWY WSZYSTKIE URL!!!
